# galaxy_to_json

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md  setup.cfg  setup.py
ABRomicsonization/: Abromics.py  AbromicsResult.py  Interfaces.py  Summarize.py  __init__.py  abromics.py
ABRomicsonization.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ABRomicsonization/ToolsIO/: AbricateIO.py  BaktaIO.py  BandageIO.py  BrackenIO.py  FastpIO.py  IntegronFinderIO.py  IseScanIO.py  Kraken2IO.py  PlasmidFinderIO.py  QuastIO.py  RecentrifugeIO.py  RefSeqMasherIO.py  ShovillIO.py  StarAmrIO.py  TabularIO.py
abromics_galaxy_json_extractor/: __init__.py  interfaces.py  main.py  summarize.py
abromics_galaxy_json_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
abromics_galaxy_json_extractor/toolsio/: abricateio.py  baktaio.py  bandageio.py  brackenio.py  fastpio.py  integronfinder2io.py  isescanio.py  kraken2io.py  plasmidfinderio.py  quastio.py  recentrifugeio.py  refseqmasherio.py  shovillio.py  staramrio.py  tabulario.py
docs/: abromics.rst  conf.py  index.rst  interface.rst  modules.rst  summarize.rst  toolsio.rst
docs/stubs/: ABRomicsonization.Interfaces.AbromicsResultIterator.rst  (+20 more)
galaxy_to_json/: ArgsInput.py  CommandParseException.py  FilterToolFile.py  ReadInput.py
tasks/: __init__.py  quality.py  tests.py
test/: README.md  run_integration_test.sh  test_abricate.py  test_abromics.py  test_bakta.py  test_bandageinfo.py  test_bracken.py  test_fastpIO.py  test_integronfinder.py  test_interfaces.py  test_isescan.py  test_kraken2.py  test_parser.py  test_parsing_validity.py  test_plasmidfinderIO.py  test_quastIO.py  test_recentrifuge.py  test_refseqmasher.py  test_shovillIO.py  test_staramr.py  test_summarize.py  test_tabular.py
tests/: abricate.tabular
(+32 files in other folders)
