[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "abromics-galaxy-json-extractor"
authors = [
    {name = "abromics", email = "abromcis@abromics.fr"},
]
description = "Convert galaxy outputs to json file"
requires-python = ">=3.9"
keywords = ["antimicrobial resistance", "abromics", "standardization", "json", "galaxy"]
license = {text = "CC-BY-4.0"}
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "License :: Creative Commons Attribution 4.0 International (CC-BY-4.0)",
        "Natural Language :: English",
        "Operating System :: POSIX",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.9",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "pandas",
    "Bio"
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "abromics_galaxy_json_extractor.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools]
zip-safe= true
license-files = ["LICENSE*"]

[project.scripts]
abromics = "abromics_galaxy_json_extractor.main:main"

[tool.poetry]
name = "abromics_galaxy_json_extractor"
version = "0.1.0"
description = ""
authors = ["abromics <abromics@abromics.fr>"]
license = "CC-BY-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
python-dotenv = "^0.20.0"
pandas = "^1.4.3"
biopython = "^1.81"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
mock = "5.0.1"
flake8 = "^4.0.1"
black = "^22.3.0"
pytest-cov = "^3.0.0"
invoke = "^1.7.0"
ipython = "^8.2.0"
pytz = "^2022.2"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

